# OopBasicsIntroductionToProgrammingPatterns

./: CMakeLists.txt  example.h  example1.cpp  example2.cpp  example3.cpp  main.cpp  screen.cpp  screen.h
Ammunition/: DamageType.h
Ammunition/Armor/: Armor.h  ChainArmor.cpp  ChainArmor.h  LeatherArmor.cpp  LeatherArmor.h  PlateArmor.cpp  PlateArmor.h
Ammunition/Weapon/: Sword.cpp  Sword.h  Weapon.h
Army/: Unite.cpp  Unite.h
Army/Cavalry/: Cavalry.cpp  Cavalry.h  Knight.cpp  Knight.h  SpearRider.cpp  SpearRider.h
Army/Factory/: ArmyFactory.h  DefendedArmyFactory.cpp  DefendedArmyFactory.h  SimpleArmyFactory.cpp  SimpleArmyFactory.h
Army/Fusiliery/: Arbalester.cpp  Arbalester.h  Archer.cpp  Archer.h  Fusiliery.cpp  Fusiliery.h
Army/Infantry/: Halberdier.cpp  Halberdier.h  Infantry.cpp  Infantry.h  Warrior.cpp  Warrior.h
Terrain/: Map.cpp  Map.h
