cmake_minimum_required(VERSION 3.20)
project(OopBasicsIntroductionToProgrammingPatterns)

set(CMAKE_CXX_STANDARD 17)

add_executable(OopBasicsIntroductionToProgrammingPatterns main.cpp Army/Unite.h Army/Fusiliery/Fusiliery.h Army/Fusiliery/Archer.cpp Army/Fusiliery/Archer.h Army/Fusiliery/Arbalester.cpp Army/Fusiliery/Arbalester.h Army/Infantry/Infantry.h Army/Infantry/Halberdier.cpp Army/Infantry/Halberdier.h Army/Infantry/Warrior.cpp Army/Infantry/Warrior.h Army/Cavalry/Cavalry.h Army/Cavalry/Knight.cpp Army/Cavalry/Knight.h Army/Cavalry/SpearRider.cpp Army/Cavalry/SpearRider.h Army/Factory/ArmyFactory.h Army/Factory/SimpleArmyFactory.cpp Army/Factory/SimpleArmyFactory.h Army/Factory/DefendedArmyFactory.cpp Army/Factory/DefendedArmyFactory.h example1.cpp example2.cpp example.h example3.cpp screen.cpp screen.h)
